kub-brandsConsumer-service-boot2/k8s/istio/svc-grafana-expose-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-grafana
  namespace: istio-system
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
  - name: http
    port: 3000
    targetPort: 3000
