kub-brandsConsumer-service-boot2/k8s/istio/svc-jager-tracing-expose-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-jager-tracing
  namespace: istio-system
spec:
  selector:
    app: jaeger
  type: LoadBalancer
  ports:
  - name: http
    port: 16686
    targetPort: 16686
