kub-brandsConsumer-service-boot2/k8s/istio/svc-prometheus-expose-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-prometheus
  namespace: istio-system
spec:
  selector:
    app: prometheus
  type: LoadBalancer
  ports:
  - name: http
    port: 9090
    targetPort: 9090
