kub-brandsConsumer-service-boot2/k8s/istio/svc-servicegraph-expose-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-servicegraph
  namespace: istio-system
spec:
  selector:
    app: servicegraph
  type: LoadBalancer
  ports:
  - name: http
    port: 8088
    targetPort: 8088
