kub-brandsConsumer-service-boot2/k8s/istio/istio-access-brandsconsumer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: brandsconsumer-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"    
---
    
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: brandsconsumer-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - brandsconsumer-gateway # <---- bind to gateway
  http:
  - match:
    - uri:
        prefix: /svcconsumer
    route:
    - destination:
        host: brandsconsumer
